oldsys-preseed (3.4) UNRELEASED; urgency=low

  * Add support for the D-Link DNS-323, thanks to a patch from
    Matt Palmer.  Closes: #502821.

 -- Martin Michlmayr <tbm@cyrius.com>  Sun, 08 Mar 2009 18:14:44 +0100

oldsys-preseed (3.3) unstable; urgency=low

  * Replicate the "gateway is unreachable" check from netcfg, so we don't
    end up preseeding a network configuration that netcfg won't accept.
    Thanks to Michael Hahn for a testcase and Stephen Gran for some code.
    Closes: #516806.

 -- Martin Michlmayr <tbm@cyrius.com>  Tue, 24 Feb 2009 16:46:15 +0100

oldsys-preseed (3.2) unstable; urgency=low

  * Revert the change from 3.1 since my analysis was wrong.  Everything
    is working as it should (see #510271).

 -- Martin Michlmayr <tbm@cyrius.com>  Wed, 07 Jan 2009 07:31:42 +0100

oldsys-preseed (3.1) unstable; urgency=low

  * Don't preseed the hostname and domain name with default values
    because the information from DHCP no longer takes precedence.
    Instead, mark the questions as seen to let netcfg choose default
    values in case the information is not supplied by DHCP.  Closes:
    #510271.

 -- Martin Michlmayr <tbm@cyrius.com>  Tue, 06 Jan 2009 18:21:27 +0100

oldsys-preseed (3.0) unstable; urgency=low

  * Stop preseeding the string "" when the netmask or gateway are empty
    because netcfg will not treat this as the empty string as I assumed
    but will complain about an invalid IP address.  Instead, mark the
    netmask variable as seen, thereby letting netcfg calculate
    an appropriate value, and set the gateway to "none" (a special case
    introduced in netcfg 1.45 to specify that no gateway should be used,
    see #497285).
  * Add a sanity check for static IP configuration: netcfg will prompt
    for an IP address and nameserver if they are not set, so use DHCP
    in that case.
  * Increase the version number to 3.0 because of this change in
    behaviour.  This change is especially intended for the Linksys NSLU2