@@ -176,6 +176,7 @@ case "`archdetect`" in
 				NETMASK=255.255.255.0
 				GATEWAY=192.168.0.1
 				[ -z "$NAMESERVERS" ] && NAMESERVERS=192.168.0.1
+				dhcp_fallback $FILE
 			fi
 		elif echo "$machine" | grep -q "^HP Media Vault mv2120"; then
 			path=/tmp/oldsys-preseed
