@@ -1,4 +1,9 @@
 d-i netcfg/choose_interface select eth0
 d-i netcfg/use_dhcp boolean true
 d-i netcfg/get_hostname string home
-
+d-i netcfg/dhcp_failed note
+d-i netcfg/dhcp_options select Configure network manually
+d-i netcfg/get_ipaddress string 192.168.0.32
+d-i netcfg/get_netmask string 255.255.255.0
+d-i netcfg/get_gateway string 192.168.0.1
+d-i netcfg/get_nameservers string 192.168.0.254 192.168.0.255
