@@ -2,4 +2,11 @@ INTERFACE=eth0
 parse_sib_conf $TEST_DIR/dns323-static_sib.conf
 sanity_check_static_config
 generate_preseed_file "$1"
+if [ "$NET_CONFIG" != "static" ]; then
+	IPADDRESS=192.168.0.32
+	NETMASK=255.255.255.0
+	GATEWAY=192.168.0.1
+	[ -z "$NAMESERVERS" ] && NAMESERVERS=192.168.0.1
+	dhcp_fallback "$1"
+fi
 
