@@ -2,6 +2,8 @@ oldsys-preseed (3.4) UNRELEASED; urgency=low
 
   * Add support for the D-Link DNS-323, thanks to a patch from
     Matt Palmer.  Closes: #502821.
+  * Generate DHCP fallback information on the D-Link DNS-323, thanks
+    Laurie Bradshaw.
 
  -- Martin Michlmayr <tbm@cyrius.com>  Sun, 08 Mar 2009 18:14:44 +0100
 
